force-app/main/default/objects/Biz_Group_Question__c/Biz_Group_Question__c.object-meta.xml
<CustomObject>
    <label>Biz. Group Question</label>
    <nameField>
        <displayFormat>BGQ-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Biz. Group Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>