force-app/main/default/objects/Biz_Group_Question__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <description>분류 1</description>
    <label>Category 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>고객</fullName>
            </value>
            <value>
                <fullName>과업범위</fullName>
            </value>
            <value>
                <fullName>수행역량</fullName>
            </value>
            <value>
                <fullName>원가적정성</fullName>
            </value>
            <value>
                <fullName>계약조건</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>