force-app/main/default/objects/Biz_Group_Question__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <description>분류 2</description>
    <label>Category 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>고객역할 명확성</fullName>
            </value>
            <value>
                <fullName>사업범위 명확화</fullName>
            </value>
            <value>
                <fullName>컨소시엄/하도업체간 업무분장 명확화</fullName>
            </value>
            <value>
                <fullName>완성도/이해도/경험보유</fullName>
            </value>
            <value>
                <fullName>역량/경험</fullName>
            </value>
            <value>
                <fullName>인력</fullName>
            </value>
            <value>
                <fullName>일정</fullName>
            </value>
            <value>
                <fullName>하도업체</fullName>
            </value>
            <value>
                <fullName>M/M</fullName>
            </value>
            <value>
                <fullName>외주비 및 재료비</fullName>
            </value>
            <value>
                <fullName>제경비</fullName>
            </value>
            <value>
                <fullName>제약사항</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>