force-app/main/default/objects/Biz_Group_Question__c/fields/ChecklistTemplate__c.field-meta.xml
<CustomField>
    <fullName>ChecklistTemplate__c</fullName>
    <label>Checklist Template</label>
    <referenceTo>Checklist_Template__c</referenceTo>
    <relationshipLabel>Biz. Group Question</relationshipLabel>
    <relationshipName>Biz_Group_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>