force-app/main/default/objects/Biz_Group_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>체크리스트 항목</description>
    <label>Question</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>