force-app/main/default/objects/Biz_Group_Question__c/fields/QuestionDetail__c.field-meta.xml
<CustomField>
    <fullName>QuestionDetail__c</fullName>
    <description>세부점검 방법</description>
    <label>Question Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>