force-app/main/default/objects/Biz_Group_Question__c/fields/ReviewDivision__c.field-meta.xml
<CustomField>
    <fullName>ReviewDivision__c</fullName>
    <description>심의부서</description>
    <label>Review Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>품질혁신팀</fullName>
            </value>
            <value>
                <fullName>법무팀</fullName>
            </value>
            <value>
                <fullName>상생협력팀</fullName>
            </value>
            <value>
                <fullName>품질혁신팀 (사업부 지원팀)</fullName>
            </value>
            <value>
                <fullName>GDC혁신팀</fullName>
            </value>
            <value>
                <fullName>개발전략그룹</fullName>
            </value>
            <value>
                <fullName>사업혁신팀 (사업부 지원팀)</fullName>
            </value>
            <value>
                <fullName>재무관리팀</fullName>
            </value>
            <value>
                <fullName>법무팀 (연구소 지식재산기획G 특허조사)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>